<resources>
    <string name="app_name">module_other</string>

    <string name="collect">我的收藏</string>
    <string name="system_name">市场监管法律法规检索系统</string>
    <string name="law">市场监管法律法规助手</string>
    <string name="open_search">立即开启一键搜索</string>
    <string name="hint_text">食品药品</string>
    <string name="keyword">关键词：</string>
    <string name="sort">分类：</string>
    <string name="description">市场监管处罚裁量标准</string>
    <string name="hint_law_name">请输入法律法规名称</string>
    <string name="hint_law_keyword">请输入关键字</string>
    <string name="law_rgl_query">法律法规查询</string>
    <string name="hint_law_standard">请输入违法行为</string>
    <string name="law_standard_query">裁量标准查询</string>
    <string name="law_standard_Illegal">违法行为</string>
    <string name="law_standard_qualitative">定性依据</string>
    <string name="law_standard_punish">处罚依据</string>
    <string name="law_standard_discretion">裁量标准</string>
    <string name="add_collect">加入收藏</string>
    <string name="work_plan">个人工作计划</string>
    <string name="create_plan">新增计划</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="add_plan_title">添加计划</string>
    <string name="plan_out_time">截止时间：</string>
    <string name="work_achievements">工作成果</string>
    <string name="work_cumulative">您已累计完成</string>
    <string name="complaints_reprt">投诉举报</string>
    <string name="comprehensive_law">综合执法</string>
    <string name="on_inspection">现场检查</string>
    <string name="supervisory_tasks">专项检查</string>
    <string name="second">次</string>
    <string name="see_document">文书查看</string>
    <string name="fill_document">文书填写</string>
    <string name="print_document">文书打印</string>
    <string name="preview_document">文书预览</string>
    <string name="loacl_document">本地文书</string>
    <string name="system_document">系统文书</string>

    <string name="goon_fill">继续填写</string>
    <string name="search">搜索</string>
    <string name="userful_document">常用文书：</string>
    <string name="print_quick">便捷打印</string>
    <string name="print_history">打印历史</string>
    <string name="print_connect_history">连接历史</string>
    <string name="print_connected">已配对设备</string>
    <string name="print_choice_content">选择打印内容</string>
    <string name="print_content">打印内容：</string>
    <string name="printer_choice">选择打印机：</string>
    <string name="printer_print">打印</string>
    <string name="infomation">政务资讯</string>

    <string-array name="keywordName">
        <item>食品药品</item>
        <item>餐饮服务</item>
    </string-array>
    <integer-array name="keywordId">
        <item>0</item>
        <item>1</item>
    </integer-array>
    <string-array name="sortName">
        <item>公共法律法规</item>
        <item>科室法律法规</item>
        <item>个人法律法规</item>
    </string-array>
    <integer-array name="sortId">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </integer-array>

    <string-array name="notifyName">
        <item>最近更新</item>
        <item>中华人民共和国宪法</item>
        <item>中华人民共和国刑事诉讼法</item>
        <item>中华人民共和国刑法</item>
        <item>中华人民共和国中外合资经营企业法</item>
    </string-array>
    <integer-array name="notifyId">
        <item>-1</item>
        <item>173</item>
        <item>174</item>
        <item>175</item>
        <item>176</item>
    </integer-array>

    <string-array name="documentName">
        <item>责令整改通知书</item>
        <item>送达回证</item>
    </string-array>
    <integer-array name="documentId">
        <item>0</item>
        <item>1</item>
    </integer-array>
</resources>
