<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/common_rect_match"
    android:background="@drawable/index_bg">

    <com.zx.module_library.view.ToolBarView
        android:id="@+id/toolbar_view"
        style="@style/common_rect_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title_text="@string/law"></com.zx.module_library.view.ToolBarView>

    <TextView
        android:id="@+id/tvCollect"
        style="@style/common_textView_white_tiny"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:drawableLeft="@drawable/collect_normal_white"
        android:text="@string/collect"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_view" />

    <TextView
        android:id="@+id/tvSystemName"
        style="@style/common_textView_white_big"
        android:layout_marginTop="@dimen/dp_48"
        android:text="@string/system_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCollect" />


    <TextView
        android:id="@+id/tvSearch"
        style="@style/common_textView_white_tiny"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/open_search"
        android:textColor="@color/text_color_light"
        app:layout_constraintRight_toRightOf="@id/tvSystemName"
        app:layout_constraintTop_toBottomOf="@id/tvSystemName" />

    <com.zx.module_library.view.SearchView
        android:id="@+id/searchView"
        style="@style/common_rect_vertical"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginRight="@dimen/dp_16"
        app:hint_text="@string/hint_text"
        app:layout_constraintTop_toBottomOf="@id/tvSearch"></com.zx.module_library.view.SearchView>

    <TextView
        android:id="@+id/keyTv"
        style="@style/common_textView_white_tiny"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/keyword"
        app:layout_constraintLeft_toLeftOf="@id/searchView"
        app:layout_constraintTop_toBottomOf="@id/searchView" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/keyRv"
        style="@style/common_recycler_wrap"
        android:layout_marginTop="@dimen/dp_8"
        app:layout_constraintLeft_toRightOf="@id/keyTv"
        app:layout_constraintTop_toBottomOf="@id/searchView">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/sortTv"
        style="@style/common_textView_white_tiny"
        android:layout_marginTop="@dimen/dp_4"
        android:text="@string/sort"
        app:layout_constraintLeft_toLeftOf="@id/keyTv"
        app:layout_constraintTop_toBottomOf="@id/keyRv" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/sortRv"
        style="@style/common_recycler_wrap"
        android:layout_marginTop="@dimen/dp_4"
        app:layout_constraintLeft_toLeftOf="@id/keyRv"
        app:layout_constraintTop_toBottomOf="@id/keyRv"></android.support.v7.widget.RecyclerView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/notifyRv"
        style="@style/common_recycler_vertical"
        android:layout_marginLeft="@dimen/dp_54"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginRight="@dimen/dp_54"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sortRv"
        android:background="@drawable/shape_8_colorwhite">

    </android.support.v7.widget.RecyclerView>
    
    <TextView
        style="@style/common_textView_white_tiny"
        app:layout_constraintRight_toRightOf="@id/notifyRv"
        app:layout_constraintTop_toBottomOf="@id/notifyRv"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/description"/>
</android.support.constraint.ConstraintLayout>