<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.zx.module_library.view.ToolBarView
        android:id="@+id/toolbar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_text="@string/print_choice_content">

    </com.zx.module_library.view.ToolBarView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/dp_100"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_local_file"
            style="@style/MySubmitButton"
            android:layout_weight="1"
            android:text="@string/loacl_document" />

        <Button
            android:id="@+id/btn_system_file"
            style="@style/MySubmitButton"
            android:layout_weight="1"
            android:text="@string/system_document" />
    </LinearLayout>
</LinearLayout>