<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.zx.module_library.view.ToolBarView
        android:id="@+id/toobar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:back_text="@string/cancel"
        app:right_text="@string/save"
        app:show_righttext="true"
        app:title_text="@string/create_plan" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white">
        <ImageView
            android:id="@+id/iv_pic"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:src="@drawable/collect_normal_gray"
            android:layout_margin="@dimen/dp_10"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_toRightOf="@+id/iv_pic"
            android:layout_margin="@dimen/dp_10"
            android:background="@null"
            android:hint="@string/add_plan_title"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:text="@string/plan_out_time"
            android:textSize="@dimen/text_size_big"
            android:textColor="@color/text_color_drak"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_20">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8月1日 星期三"
                android:textSize="@dimen/text_size_normal"
                />
        <ImageView
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_10"
            android:layout_gravity="center_vertical"
            android:src="@drawable/collect_normal_gray"
            android:layout_marginLeft="10dp"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>