<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.zx.module_library.view.ToolBarView
        android:id="@+id/toolbar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_text="@string/print_quick" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100">

        <TextView
            android:id="@+id/tv_print_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:text="@string/print_content"
            android:textColor="@color/text_color_noraml"
            android:textSize="@dimen/text_size_normal" />

        <ImageView
            android:id="@+id/iv_print"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_toRightOf="@+id/tv_print_content"
            android:src="@drawable/docuementpic" />

        <TextView
            android:id="@+id/tv_print_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_toRightOf="@+id/iv_print"
            android:textColor="@color/text_color_noraml"
            android:textSize="@dimen/text_size_normal" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:background="@color/docment_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_30"
                android:text="@string/printer_choice" />

            <Spinner
                android:id="@+id/s_printer"
                android:layout_width="@dimen/dp_200"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"></Spinner>
        </LinearLayout>
        <Button
            android:id="@+id/btn_print"
            style="@style/MySubmitButton"
            android:layout_weight="1"
            android:text="@string/printer_print"
            android:layout_marginBottom="@dimen/dp_40"/>
    </RelativeLayout>
</LinearLayout>