<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.zx.module_library.view.ToolBarView
        android:id="@+id/toobar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_text="@string/see_document"
        >

    </com.zx.module_library.view.ToolBarView>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">
    <com.zx.module_library.view.SearchView
        android:id="@+id/sv_document_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:hint_text="@string/search"
        android:layout_marginTop="@dimen/dp_20"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_below="@+id/sv_document_search">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/userful_document"
            android:textColor="@color/text_color_noraml"
            android:textSize="@dimen/text_size_small"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_document_useful"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
</RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_document"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>