<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.zx.module_library.view.ToolBarView
        android:id="@+id/toolbar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dp_1"
                    android:background="@color/law_color"
                    android:gravity="center"
                    android:text="@string/law_standard_Illegal"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:id="@+id/tv_tandard_Illegal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_10"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dp_1"
                    android:background="@color/law_color"
                    android:gravity="center"
                    android:text="@string/law_standard_qualitative"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:id="@+id/tv_tandard_qualitative"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_10"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dp_1"
                    android:background="@color/law_color"
                    android:gravity="center"
                    android:text="@string/law_standard_punish"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:id="@+id/tv_tandard_punish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_10"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dp_1"
                    android:background="@color/law_color"
                    android:gravity="center"
                    android:text="@string/law_standard_discretion"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:id="@+id/tv_tandard_discretion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_10"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>